2002-07-18  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (main): Write the pidfile before switching away
	from root, but only if the user is root.

2002-07-17  Adam Fedor  <fedor@gnu.org>

	* Source/NSString.m (-getLineStart:end:contentsEnd:forRange:): Fix
	lineEnd and contentEnd check for \r\n (particularly at end of
	string.

Tue Jul 16 16:43:59 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/GSXML.h ([GSXMLNode -setNamespace:]): Added
	missing method essential to use namespaces.
	* Source/Additions/GSXML.m ([GSXMLNode -setNamespace:]): Implemented.
	
2002-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileManager.m: Don't standardise path before converting to
        filesystem representation.
        * Tools/gdomap.c: Security enhancement - call setgroups().

2002-07-03  Adam Fedor  <fedor@gnu.org>

	* Version: 1.3.4
	* configure.ac: Remove warning about libffi
	* Documentation/news.texi: Update.

2002-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Ensure mime-version header appears
	before other headers. Fix bug in terminatimg mime data.

2002-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Don't write to pidfile until *after* setuid away
	from root. Bug reported by James Kehl <mkehl@gil.com.au>

2002-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Correct test for multipart content when
	generating raw data.  Fix by Mark Allison <mark@brainstorm.co.uk>

2002-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSFileHandle.h: New version of UnixFileHandle
	for combined unix/windoze use.
	* Source/GSFileHandle.m: New combined unix/windows implementation.
	* Source/NSFileHandle.m: Use GSFileHandle.
	* Source/GNUMakefile: Build GSFileHandle.
	* SSL/GSUnixSSLHandle.m: Update for combined GSFileHandle

2002-06-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-respondsToSelector:]) handle nul selectors.