@@ -26,7 +26,9 @@
    */
 
 #include <math.h>
+#if !defined(__APPLE__) || !defined(GNU_RUNTIME)
 #include <ctype.h>
+#endif
 #include <Foundation/NSDecimal.h>
 #include <Foundation/NSString.h>
 #include <Foundation/NSDictionary.h>
